--- a/src/Components/Contacts/contacts.css
+++ b/src/Components/Contacts/contacts.css
@@ -57,5 +57,11 @@ h2{
     padding: 10px 15px;
     list-style: none;
     border-top: 1px solid rgb(43, 43, 43);
-    /* background-color: purple; */
+}
+
+.genderFilter{
+    display: flex;
+    justify-content: space-around;
+    font-size: 12px;
+    font-weight: 800;
 }
